2011-03-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - made ignored_attrs and forced_attrs global
	  - added run time to report

2011-03-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - print "End timestamp" message in report

2011-03-18	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/db_disk.c:
	  - fixed handling of "/" directory inode
	  - got rid of some static variables

2011-03-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Removed contrib/mkgitsnapshot.sh

2011-02-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Released version 0.16a1

2011-02-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* README:
	  - adjusted "Source Code Verification" section

2010-12-30	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - print "Looks okay" message also in DO_DIFF mode

2010-12-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/compare_db.h, src/compare_db.c:
	  - added gen_report function (code copied from src/aide.c)
	* src/aide.c:
	  - removed code copied to src/compare_db.c
	* include/compare_db.h:
	  - removed report_tree function

2010-12-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - use strftime to format timestamps
	  - made width_details, time_format[] and time_string_len constant
	  - added numeric timezone to the date format

2010-12-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added xattrs2array, acl2array and get_attribute_values functions
	  - added print_dbline_attributes function, changes included:
		- wrap attribute values instead of cut them off
		- side-by-side output of acl and xattrs values
		- use '|' to separate the old value from the new one
		- use node->changed_attributes instead of recalculate the
		  changed attributes
		- print added or removed attributes of changed entries if forced
		  via report_attributes
	  - removed obsolete code